[package]
name = "missionreviewer"
version = "0.3.1"
edition = "2021"
authors = ["Synixe Contractors"]

[dependencies]
hemtt-config = { git = "https://github.com/brettmayson/hemtt" }
hemtt-preprocessor = { git = "https://github.com/brettmayson/hemtt" }
hemtt-common = { git = "https://github.com/brettmayson/hemtt" }

rayon = "1.8.1"
walkdir = "2.4.0"
