[package]
name = "missionreviewer"
version = "0.3.6"
edition = "2021"
authors = ["Synixe Contractors"]

[dependencies]
hemtt-common = { git = "https://github.com/brettmayson/hemtt" }
hemtt-config = { git = "https://github.com/brettmayson/hemtt" }
hemtt-preprocessor = { git = "https://github.com/brettmayson/hemtt" }
hemtt-workspace = { git = "https://github.com/brettmayson/hemtt" }

rayon = "1.10.0"
walkdir = "2.5.0"
